Fixed the align, thanks Cameron

--- a/day00/ex02/doft.css
+++ b/day00/ex02/doft.css
@@ -97,8 +97,8 @@ body {
 
 .icon {
 	height: 60px;
-	/* width: 60px; */
-	margin-top: 5px;
+	width: 60px;
+	margin-top: 10px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -108,4 +108,11 @@ body {
 	border-style: solid;
 	border-width: 5px;
 	border-radius: 5px;
+}
+
+#fix {
+	width: 60px;
+	height: 360px;
+	margin-left: auto;
+	margin-right: auto;
 }
